Remove IE weird input additions, fallback to mobile error style on IE, fix some mobile error issues

--- a/src/components/forms/input.scss
+++ b/src/components/forms/input.scss
@@ -35,4 +35,9 @@ $pass-bg: lighten($ui-aqua, 35%);
         border: 1px solid $active-dark-gray;
         background-color: $pass-bg;
     }
+
+    /* IE10/11-specific style resets */
+    &::-ms-reveal, &::-ms-clear {
+        display: none;
+    }
 }
